updated controllers and swagger
